Replaced xml.gz files with plain text files in test resources + using XPath to read expected values